objects/ABP_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Scorecards</relationshipLabel>
        <relationshipName>ABP_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Summary_Answer__c</fullName>
        <label>Account Summary Answer</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Thoroughly understands the customer&apos;s current business priorities and future direction and validated it with the customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Thoroughly understands the customer&apos;s current business priorities and future direction.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Shows current relevant business knowledge of customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Shows limited current relevant business knowledge of customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Shows no current relevant business knowledge of customer.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Summary_avg__c</fullName>
        <formula>(Q1__c + Q2__c)/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Summary avg</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Summary_comments__c</fullName>
        <label>Account Summary comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_plan_Answer_1__c</fullName>
        <label>BU plan Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>5 – Yes, the plan shows thorough understanding of the customer&apos;s current business, future direction, and the plan has been validated with the customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 – Yes, the plan shows thorough understanding of the customer&apos;s current business priorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>and future direction.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 – Yes, the plan shows current, relevant business knowledge of the customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 – Yes, the plan shows limited, current, and relevant business knowledge of customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- No, the plan does not show current, relevant business knowledge of customer.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_plan_Answer_2__c</fullName>
        <label>BU plan Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_plan_Answer_3__c</fullName>
        <label>BU plan Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_plan_Comments_1__c</fullName>
        <label>BU plan Comments 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Plans_Answer__c</fullName>
        <label>Business Unit Plans Answer</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Plans_comments__c</fullName>
        <label>Business Unit Plans comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Landscapes_Answer__c</fullName>
        <label>Competitive Landscapes Answer</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Landscapes_Comments__c</fullName>
        <label>Competitive Landscapes Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Priorities_Answer__c</fullName>
        <label>Customer Business Priorities Answer</label>
        <picklist>
            <picklistValues>
                <fullName>5 – Customer Business Priorities are clearly defined and validated by the customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 – Customer Business Priorities are clearly defined but not validated by the customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 – Customer Business Priorities are partially defined and validated by the customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 – Customer Business Priorities are partially defined but not validated by  the customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 – Customer Business Priorities are not defined.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Priorities_Avg__c</fullName>
        <formula>(Q11__c + Q3__c)/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Business Priorities Avg</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Priorities_comments__c</fullName>
        <label>Customer Business Priorities comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Rel_Maps_Avg__c</fullName>
        <formula>(Q8__c+Q11__c)/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Rel Maps Avg</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Answer_1__c</fullName>
        <label>Customer Relationship Maps  Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Answer_2__c</fullName>
        <label>Customer Relationship Maps Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Answer_3__c</fullName>
        <label>Customer Relationship Maps Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Comments1_3__c</fullName>
        <label>Customer Relationship Maps Comments 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Comments_1__c</fullName>
        <label>Customer Relationship Maps Comments 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Comments_4__c</fullName>
        <label>Customer Relationship Maps Comments 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Commets_2__c</fullName>
        <label>Customer Relationship Maps Commets 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HPSI_Avg__c</fullName>
        <formula>(Q4__c + Q5__c)/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPSI Avg</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HP_Strategic_Initiatives_Answer_1__c</fullName>
        <label>HP Strategic Initiatives Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Thoroughly understands the customer&apos;s current business priorities and future direction and validated it with the customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Thoroughly understands the customer&apos;s current business priorities and future direction.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Shows current relevant business knowledge of customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Shows no current relevant business knowledge of customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Shows limited current relevant business knowledge of customer.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Strategic_Initiatives_Answer_2__c</fullName>
        <label>HP Strategic Initiatives Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Strategic_Initiatives_Comments_1__c</fullName>
        <label>HP Strategic Initiatives Comments 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HP_Strategic_Initiatives_comments_2__c</fullName>
        <label>HP Strategic Initiatives comments 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Innovation_Agenda_Answer__c</fullName>
        <label>Innovation Agenda Answer</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Innovation_Agenda_Comments__c</fullName>
        <label>Innovation Agenda Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <formula>CASE( Customer_Relationship_Maps_Answer_3__c, 
&quot;1 - Strongly Disagree&quot;, 1,
&quot;2 - Disagree&quot;,2,
&quot;3 - Neither Agree or Disagree&quot;,3,
&quot;4 - Agree&quot;,4,
&quot;5 - Strongly Agree&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <formula>CASE( Customer_Relationship_Maps_Answer_4__c, 
&quot;5-Yes&quot;,5,
&quot;Not Applicable&quot;,5,
&quot;0-No&quot;,0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <formula>CASE( Account_Summary_Answer__c, 
&quot;1- Shows no current relevant business knowledge of customer.&quot;, 1,
&quot;2 - Shows limited current relevant business knowledge of customer.&quot;,2,
&quot;3 - Shows current relevant business knowledge of customer.&quot;,3,
&quot;4 - Thoroughly understands the customer&apos;s current business priorities and future direction.&quot;,4,
&quot;5 - Thoroughly understands the customer&apos;s current business priorities and future direction and validated it with the customer.&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Totals__c</fullName>
        <formula>Q1__c + Q2__c + Q3__c +Q4__c  +Q5__c + Q6__c  +Q7__c  +Q8__c  +Q9__c  +Q10__c  +Q11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Plan Scorecard</label>
    <nameField>
        <displayFormat>ABP Scorecard-{00000}</displayFormat>
        <label>ABP Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>